...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Get Rebates" id="qix-1R-lHh">
                        <barButtonItem key="rightBarButtonItem" title="Logout" id="rXc-GK-Jyj">
                            <connections>
                                <action selector="logOutBtnClicked:" destination="BYZ-38-t0r" id="EbF-sC-Qbx"/>
...
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                            </textView>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="receipt" translatesAutoresizingMaskIntoConstraints="NO" id="GRa-QV-ufN">
                                                <rect key="frame" x="193" y="268" width="180" height="179"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KQS-ts-hI4">
                                                <rect key="frame" x="265" y="354" width="70" height="30"/>
                                                <state key="normal" title="Login now">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
...
                                                <rect key="frame" x="20" y="245" width="560" height="90"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vfV-fy-Ud5">
                                                        <rect key="frame" x="0.0" y="0.0" width="560" height="40"/>
                                                        <constraints>
...
                                                        </connections>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HrZ-Ic-wZC">
                                                        <rect key="frame" x="0.0" y="50" width="560" height="40"/>
                                                        <constraints>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IJx-nS-k0B" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="MyIncome" image="incomeicon" id="EAP-8H-pcf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3Ix-Eh-csd">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="feg-d1-AWV" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Summary" image="charticon" id="alW-Wq-Iey"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SjC-gn-te3">
...
