...
        alert.addTextFieldWithConfigurationHandler({ (cardOwnertextField) -> Void in
            cardOwnertextField.placeholder = "Email Address"
        })
        
        //3. Grab the value from the text field, and print it when the user clicks OK.
        
        alert.addAction(UIAlertAction(title: "OK", style: .Default, handler: { (action) -> Void in
            let emailtextField = alert.textFields![0] as UITextField
            if self.emailTextField.text != nil{
                self.resetEmailPassword(emailtextField.text!)
            }
            
        }))
...
